# wallcarving

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
include/: change_wall.h  floor.h  shader_util.h  userInput.h  wall.h
shaders/: chopper.vert.glsl  crosshair.frag.glsl  crosshair.vert.glsl
src/: MuudaSeina.cpp  change_wall.cpp  floor.cpp  main.cpp  shader_util.cpp  userInput.cpp  wall.cpp
